Integrate SonarQube into build pipeline and configure Java toolchain
- Added GitHub Actions workflow for SonarQube analysis and caching Gradle/SonarQube dependencies for faster builds
- Updated Java configuration in `build.gradle` files to utilize toolchain for Java 17 compatibility
- Applied SonarQube plugin and properties configuration in `shopping/build.gradle` file

--- a/persistence/build.gradle
+++ b/persistence/build.gradle
@@ -8,7 +8,9 @@ group = 'com.kousenit'
 version = '1.0'
 
 java {
-    sourceCompatibility = '17'
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
 }
 
 repositories {
