--- a/shopping/build.gradle
+++ b/shopping/build.gradle
@@ -2,13 +2,24 @@ plugins {
     id 'org.springframework.boot' version '3.5.3'
     id 'io.spring.dependency-management' version '1.1.7'
     id 'java'
+    id "org.sonarqube" version "6.2.0.5505"
+}
+
+sonar {
+    properties {
+        property "sonar.projectKey", "kousen_spring-and-spring-boot"
+        property "sonar.organization", "kousen-it-inc"
+        property "sonar.host.url", "https://sonarcloud.io"
+    }
 }
 
 group = 'com.kousenit'
 version = '0.0.1-SNAPSHOT'
 
 java {
-    sourceCompatibility = '17'
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
 }
 
 configurations {
